test/Fail/Issue2788c.err
Issue2788c.agda:8,1-39: error: [GenericError]
Missing option --cubical or --erased-cubical
when checking the pragma BUILTIN PATHP PathP
